# BohrAtomSim

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  build.sh  pytest.ini  setup.py
bindings/: simulation.py
cmake/: Dependencies.cmake
config/: imgui.ini
debug/: debug_issue_9_0.ipynb
docs/: 2D_Relativistic_EOM.ipynb  2D_Relativistic_EOM_Angular_Momentum_Ue.ipynb  3D_Nonrelativistic_EOM.ipynb  3D_Relativistic_EOM.ipynb  Developing_3D_Relativistic_Equations.ipynb  Developing_3D_Relativistic_Equations_Without_Tricks.ipynb  Developing_3D_Relativistic_Spin_Equations.ipynb
include/: _types.h  config.h  filter.h  math_utils.hpp  orbital_math.h
include/atom/: atom_bohr_sim.h  result_recorders.h  result_recorders.hpp
include/data_expr/: AstPrinter.hpp  Expr.hpp  Interpreter.hpp  Parser.hpp  Token.hpp  Tokenizer.hpp
include/dataset/: BitVector.hpp  Dataset.hpp  DatasetDeserializer.hpp  DatasetFactory.hpp  DatasetImpl.hpp  DatasetSerializer.hpp  FilteredDatasetView.hpp  MaskedColumnCache.hpp  VectorOperations.hpp  expression_utils.hpp
include/dialogs/: ConfirmationDialog.hpp
include/eom/: polar.hpp  polar_rel.hpp  spherical.hpp  spherical_rel.hpp  spin.hpp  utils.hpp
include/explorer_manager/: OngoingSimulationManager.hpp  SimulationFields.hpp
include/exporters/: CSVExporter.hpp  ExportFormat.hpp  ExporterFactory.hpp  HDF5Exporter.hpp  SimulationExporter.hpp
include/hdf5/: SimulationBuffer.hpp  SimulationFields.hpp  SimulationHDF5.hpp  SimulationManager.hpp
include/physics/eom/: eom_common.hpp  polar.hpp  polar_rel.hpp  spherical.hpp  spherical_rel.hpp  spin.hpp
include/physics/math/: QuantumUtils.hpp  Vector2.hpp  Vector3.hpp  VectorOps.hpp  _types.h  constants.hpp  intrinsics.hpp  macros.hpp  math_utils.hpp  types.hpp
include/physics/potential/: CoulombPotential.hpp  (+4 more)
include/plotter/: ColumnExtractionFunction.hpp  IPlotFunction.hpp  PsiDotPlotFunction.hpp  SimulationPlotter.hpp  SimulationVisualizer.hpp  TextureLoader.hpp
include/polar/: polar.h  polar_calc.h  polar_calc_rel.h  polar_sim.h  polar_sim_rel.h
include/result/: result.h
include/service_locator/: ServiceLocator.hpp
include/simulation_2d/: SimulationStepper2D.hpp  simulation_2d.h
include/simulation_repositories/: ArchivedSimulationManager.hpp  DataSource.hpp  ISimulationRepository.hpp  NotebookRepository.hpp  PotentialRepository.hpp  PotentialRepositoryImpl.hpp  Repository.hpp  SimulationRepository.hpp  SimulationRepositoryImpl.hpp  SimulationResultLoader.hpp  SimulationResultMonitor.hpp  SimulationService.hpp  SimulationServiceImpl.hpp
include/simulation_runner/: simulation_runner.h
include/simulator_runner/: ISimulator.hpp  Simulation.hpp  Simulator.hpp
include/spherical/: optimized_3d_rel_sim.h  spherical.h  spherical_calc.h  spherical_calc_rel.h  spherical_sim.h  spherical_sim.hpp  spherical_sim_rel.h
include/spin/: spin.h  spin_calc.h  spin_sim.h
include/steppers/: Potential.hpp  PotentialBuilder.hpp  PotentialEvaluatorBuilderFactory.hpp  SimulationStepper.hpp  SimulationStepper2D.hpp  SimulationStepperImpl.hpp  State.hpp  State2D.hpp  State3D.hpp  StateBuilder.hpp  StateFactory.hpp  StepperFactory.hpp  SymbolicPotentialStepper.hpp
include/ui/: Component.hpp  ConfirmationDialog.hpp  PotentialsView.hpp  SimulationAnalysisManager.hpp  SimulationAnalyzer.hpp  SimulationTableUI.hpp  ui_utils.hpp
include/utils/: Lazy.hpp  ServiceLocator.hpp  constants.h  iterator.h  linked_list.h  macros.h  reads.h  str_parser.h  types.h  utils.h  utils.hpp
include/view/: AddSimulationDialog.hpp  Component.hpp  NotebookUI.hpp  PlotUI.hpp  PotentialsView.hpp  SideBar.hpp  Simulation.hpp  SimulationAnalysisManager.hpp  SimulationAnalyzer.hpp  SimulationCard.hpp  SimulationExplorer.hpp  SimulationTableUI.hpp
src/: bohr_model_module.c  main.c  main.cpp  math_utils.cpp  orbital_math.c
src/atom/: result_recorders.c
src/config/: config.c  filter.c
src/data_expr/: Expr.cpp  Interpreter.cpp  Parser.cpp  Tokenizer.cpp
src/dataset/: BitVector.cpp  DatasetDeserializer.cpp  DatasetFactory.cpp  DatasetImpl.cpp  DatasetSerializer.cpp  FilteredDatasetView.cpp  expression_utils.cpp
src/dialogs/: ConfirmationDialog.cpp
src/eom/: polar.cpp  spherical.cpp  utils.cpp
src/explorer_manager/: OngoingSimulationManager.cpp
src/exporters/: CSVExporter.cpp  HDF5Exporter.cpp
src/hdf5/: SimulationBuffer.cpp  SimulationHDF5.cpp  SimulationManager.cpp
src/plotter/: ColumnExtractionFunction.cpp  PsiDotPlotFunction.cpp  SimulationPlotter.cpp  SimulationVisualizer.cpp  TextureLoader.cpp
src/polar/: polar.c  polar_calc.c  polar_calc_rel.c  polar_sim.c  polar_sim_rel.c
src/simulation_2d/: SimulationStepper2D.cpp  simulation_2d.c
src/simulation_repositories/: ArchivedSimulationManager.cpp  DataSource.cpp  NotebookRepository.cpp  PotentialRepositoryImpl.cpp  SimulationRepository.cpp  SimulationResultLoader.cpp  SimulationResultMonitor.cpp  SimulationServiceImpl.cpp
src/simulation_runner/: Simulator.cpp  simulation_runner.c
src/spherical/: optimized_3d_rel_sim.c  spherical.c  spherical_calc.c  spherical_calc_rel.c  spherical_sim.c  spherical_sim.cpp  spherical_sim_rel.c
src/spin/: spin.c  spin_sim.c
src/steppers/: Potential.cpp  PotentialBuilder.cpp  SimulationStepper.cpp  SimulationStepper2D.cpp  StateBuilder.cpp  StepperFactory.cpp  SymbolicPotentialStepper.cpp
src/ui/: ConfirmationDialog.cpp  PotentialsView.cpp  SimulationAnalysisManager.cpp  SimulationAnalyzer.cpp  SimulationTableUI.cpp  ui_utils.cpp
src/utils/: iterator.c  linked_list.c  reads.c  utils.cpp
src/view/: AddSimulationDialog.cpp  NotebookUI.cpp  PlotUI.cpp  PotentialsView.cpp  SideBar  SideBar.cpp  Simulation.cpp  SimulationAnalysisManager.cpp  SimulationAnalyzer.cpp  SimulationCard.cpp  SimulationExplorer.cpp  SimulationTableUI.cpp
tests/: lib_structs.py  orbital_math.py  test_orbital_math.py  utils.py
tests/polar/: polar_calc.py  polar_calc_rel.py  radial_limit.py  test_polar_calc.py  test_polar_calc_rel.py
tools/: plotters.py  simulation_explorer.py  utils.py
(+102 files in other folders)
